--- a/src/main/resources/templates/addressBook.html
+++ b/src/main/resources/templates/addressBook.html
@@ -1,19 +1,22 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Address Book Example</title>
+	<title>Address Book + ${id}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<div th:replace="homePage :: idEntryForm"></div>
 <header th:text="'Address Book #' + ${id}"/>
 <table>
 	<tr>
 		<th>Name</th>
+		<th>Address</th>
 		<th>Phone</th>
 	</tr>
 	<th:block th:each="buddy : ${list}">
 		<tr>
 			<td th:text="${buddy.name}"></td>
+			<td th:text="${buddy.address}"></td>
 			<td th:text="${buddy.phone}"></td>
 		</tr>
 	</th:block>
