Fixed Input Box

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -9,7 +9,7 @@
 	<script src="script.js"></script>
 	Please enter the address book number you wish to view.
 	<form id="submitButton" action="/">
-		<input type="number" name="id">
+		<input type="text" name="id">
 		<input type="submit" value="Submit">
 	</form>
 </div>
