--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <div th:replace="homePage :: idEntryForm"></div>
-<p th:text="${errMess}" />
+<div id="results">
+	<p th:text="${errMess}" />
+</div>
 </body>
 </html>
