--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <div th:fragment="idEntryForm">
-	<script src="../script.js"></script>
+	<script src="../static/script.js"></script>
 	Please enter the address book number you wish to view.
 	<form id="submitButton" action="/">
-		<input type="text" name="id">
+		<input type="text" name="bookID">
 		<input type="submit" value="Submit">
 	</form>
 </div>
