--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div th:fragment="idEntryForm">
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script>
 		$("form").submit(function(e) {
 			//e.preventDefault();
