--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -8,7 +8,7 @@
 <div th:fragment="idEntryForm">
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script>
-		$("form").submit(function(e) {
+		$("#submitButton").submit(function(e) {
 			e.preventDefault();
 			e.returnValue = false;
 
