Added adding buddies and books

--- a/src/main/resources/templates/addressBook.html
+++ b/src/main/resources/templates/addressBook.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<title th:text="'Address Book #' + ${id}"/>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+<head th:replace="homePage :: header"></head>
 <body>
 <div th:replace="homePage :: idEntryForm"></div>
 <div id="results">
