Added input form to addressbook page.

--- a/src/main/resources/templates/addressBook.html
+++ b/src/main/resources/templates/addressBook.html
@@ -19,6 +19,12 @@
 			</tr>
 		</th:block>
 	</table>
+	<form id="addBuddy" action="/addBuddy">
+		Name: <input id=nameInput type="text" name="buddyName"><br>
+		Phone: <input id=phoneInput type="text" name="buddyPhone"><br>
+		Address: <input id=addressInput type="text" name="buddyAddress"><br>
+		<input type="submit" value="Add Buddy">
+	</form>
 </div>
 </body>
 </html>
