--- a/src/main/resources/templates/addressBook.html
+++ b/src/main/resources/templates/addressBook.html
@@ -3,6 +3,7 @@
 <head th:replace="homePage :: header"></head>
 <body>
 <div th:replace="homePage :: idEntryForm"></div>
+<div th:replace="homePage :: addBookForm"></div>
 <div id="results">
 	<header th:text="'Address Book #' + ${id}"/>
 	<table>
