--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,6 +3,7 @@
 <head th:replace="homePage :: header"></head>
 <body>
 <div th:replace="homePage :: viewBookForm"></div>
+<div th:replace="homePage :: addBookForm"></div>
 <div id="results">
 	<p th:text="${errMess}" />
 </div>
