--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -9,7 +9,7 @@
 <body>
 <div th:fragment="viewBookForm">
 	Enter the address book number you wish to view.
-	<form id="viewBook" action="/">
+	<form id="viewBook" action="/viewBook">
 		<input id=idBoxView type="number" name="bookID">
 		<input type="submit" value="View Address Book">
 	</form>
