Added a rest controller for Courses

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Course Viewer</title>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script th:src="@{/js/script.js}"></script>
+	<script th:src="@{/js/address.js}"></script>
 </head>
 <body>
 <div th:fragment="RadioForm">
@@ -35,7 +35,8 @@
 	</form>
 </div>
 
-<div id="results">
+<div>
+    <p class="courseInfo">CourseList contains: </p>
 </div>
 </body>
 
