worked on search by course

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -62,7 +62,7 @@
         var radios = document.getElementsByName("SearchType");
 
 		if(radios[0].checked){alert("program")}
-		else if(radios[1].checked){alert("course")}
+		else if(radios[1].checked){location.href="http://localhost:8090/viewCourse?id=" + document.getElementById("varia").value}
 		else if(radios[2].checked){alert("catagories")}
     }
 </script>
