worked on adding heroku support

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -61,8 +61,8 @@
     function searchFunc() {
         var radios = document.getElementsByName("SearchType");
 
-		if(radios[0].checked){alert("program")}
-		else if(radios[1].checked){location.href="http://localhost:8090/viewCourse?id=" + document.getElementById("varia").value}
+		if(radios[0].checked){alert(window.location.protocol + "//" + window.location.hostname + "/viewCourse?id=" + document.getElementById("varia").value)}
+		else if(radios[1].checked){location.href= window.location.protocol + "//" + window.location.hostname + "/viewCourse?id=" + document.getElementById("varia").value}
 		else if(radios[2].checked){alert("catagories")}
     }
 </script>
