added admin functionality -addCourseOutcome & addCatOutcome do not work as far as I can tell

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
 <div th:replace="homePage :: viewBookForm"></div>
 <div th:replace="homePage :: addBookForm"></div>
 <div id="results">
-	<p th:text="${errMess}" />
+	<p th:text="${courseInfo}" />
 </div>
 </body>
 </html>
