--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -76,7 +76,7 @@
 
     function logFunc() {
         var password = document.getElementById("password").value;
-        if(password == "BigBen69"){location.href= "admin"}
+        if(password == "IAmAdmin"){location.href= "admin"}
         else{alert("THERE WILL BE CONSEQUENCES!");}
     }
 </script>
