--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -10,26 +10,24 @@
 <div id="RadioForm">
 	Select a search method.
 	<form id="radioSet">
-		<input type="radio" name="SearchType" value="prog" onClick="progSearch()">Search by Program<br>
 		<input type="radio" name="SearchType" value="course" onClick="courseSearch()">Search by Course<br>
 		<input type="radio" name="SearchType" value="cat" onClick="catSearch()">Search by Category<br>
 	</form>
 </div>
 
-<div id="searchForm">
-	<form id="varSearch">
-		<label id="lab">Program name: </label>
-		<input type="text" id="varia" name="progName" value="Sample text">
-	</form>
+<div>
+	<select id=courseDrop style="visibility: collapse">
+		<option value='Default'>Select course</option>
+	</select>
 </div>
 
-<div id="YearForm" style="visibility:hidden">
-	<form id="YearSearch">
-		Year: <input type="text" name="yearVal" value="1"><br>
-	</form>
+<div>
+	<select id=catDrop style="visibility: collapse">
+		<option value='Default'>Select Category</option>
+	</select>
 </div>
 
-<div id="SubForm">
+<div id="SubForm" >
 	<form id="Submitting">
 		<button type="button" onclick="searchFunc()">Search</button>
 	</form>
@@ -48,41 +46,35 @@
 </body>
 
 <script language="Javascript">
-    function progSearch() {
-        document.getElementById('lab').innerHTML = 'Program Name: ';
-        document.getElementById("YearForm").style.visibility="hidden";
-    }
-    function yearSearch() {
-        document.getElementById('lab').innerHTML = 'Program Name: ';
-        document.getElementById("YearForm").style.visibility="visible";
-    }
+
     function courseSearch() {
-        document.getElementById('lab').innerHTML = 'Course Name: ';
-        document.getElementById("YearForm").style.visibility="hidden";
+        document.getElementById("courseDrop").style.visibility="visible";
+		document.getElementById("catDrop").style.visibility="collapse";
     }
     function catSearch() {
-        document.getElementById('lab').innerHTML = 'Category Name: ';
-        document.getElementById("YearForm").style.visibility="hidden";
+		document.getElementById("courseDrop").style.visibility="collapse";
+		document.getElementById("catDrop").style.visibility="visible";
     }
 
     function searchFunc() {
-        let radios = document.getElementsByName("SearchType");
+        var radios = document.getElementsByName("SearchType");
 		if(radios[0].checked)
 		{
-			alert("Search by program not yet implimented");
+			alert("Search by program not yet implemented");
 		}
 		else if(radios[1].checked)
 		{
 			$.ajax({
-				url: window.location.protocol + "//" + window.location.hostname + "/viewCourse?id=" + document.getElementById("varia").value
+				url: window.location.protocol + "//" + window.location.hostname + "/viewCourse?id=" + document.getElementById('courseDrop').value
 			}).then(function(data){
 				tableFunc(data, "Course");
 			});
 		}
 		else if(radios[2].checked)
 		{
+
 			$.ajax({
-				url: window.location.protocol + "//" + window.location.hostname + "/viewCat?id=" + document.getElementById("varia").value
+				url: window.location.protocol + "//" + window.location.hostname + "/viewCat?id=" + document.getElementById('catDrop').value
 			}).then(function(data){
 				tableFunc(data,"Category");
 			});
@@ -91,9 +83,9 @@
     }
 
     function tableFunc(data, searchType){
-		let results = data.toString().slice(0, -1).split("(");
+		var results = data.toString().slice(0, -1).split("(");
 
-		let objectives = results[1].split(",");
+		var objectives = results[1].split(",");
 		var output = "<header>Search by " + searchType + ": " + document.getElementById("varia").value + "</header>";
 		output += "<table border='5'>\n" +
 				"<tr>" +
@@ -101,7 +93,7 @@
 				"<th>Outcome description</th>" +
 				"</tr>";
 		for (var i = 0; i < objectives.length; i++) {
-			let objective = objectives[i].split(":");
+			var objective = objectives[i].split(":");
 			output += "<tr>" +
 					"<th>" + objective[0] + "</th>" +
 					"<th>" + objective[1] + "</th>" +
@@ -115,6 +107,33 @@
         var password = document.getElementById("password").value;
         if(password == "IAmAdmin"){location.href= "admin"}
         else{alert("THERE WILL BE CONSEQUENCES!");}
+    }
+
+	$(document).ready(function() {
+        $.ajax({
+            url: window.location.protocol + "//" + window.location.hostname + "/viewCourseNames"
+        }).then(function(data){
+            var innertext = dropdownFunc(data,"Course");
+            document.getElementById("courseDrop").innerHTML = innertext;
+        });
+
+        $.ajax({
+            url: window.location.protocol + "//" + window.location.hostname + "/viewCatNames"
+        }).then(function(data){
+            var innertext = dropdownFunc(data,"Category");
+            document.getElementById("catDrop").innerHTML = innertext;
+        });
+	});
+
+    function dropdownFunc(data, type){
+        var results = data.toString().split(",");
+        var output = "<select id='"+ type +"'>" +
+                "<option value='Default'>Select "+ type +"</option>";
+        for (var i = 0; i < results.length-1; i++) {
+            output += "<option value='"+ results[i] + "'>"+ results[i] + "</option>";
+        }
+        output += "</select>";
+        return output;
     }
 </script>
 
