--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -86,7 +86,7 @@
 		var results = data.toString().slice(0, -1).split("(");
 
 		var objectives = results[1].split(",");
-		var output = "<header>Search by " + searchType + ": " + document.getElementById("varia").value + "</header>";
+		var output = "<header>Search by " + searchType + ": " + document.getElementById("courseDrop").value + "</header>";
 		output += "<table border='5'>\n" +
 				"<tr>" +
 				"<th>Outcome Name</th>" +
